# JYEditor

./: CMakeLists.txt  README.md  vcpkg.json
doc/: ARCHITECTURE.md
installer/: setup.iss
resources/: resource.h  resource.rc
src/: EditorWindow.cpp  EditorWindow.h  FileUtils.cpp  FileUtils.h  main.cpp
test/: sample.json  sample.yaml
